# starlight

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  \  build.sh  codecov.yaml  imgui.ini  install_deps.sh  requirements.txt  run_tests.sh
editor/: Application.cpp  Application.h  CMakeLists.txt  Events.h  UI.cpp  UI.h  main.cpp
editor/ui/: Console.cpp  Console.h  Core.cpp  Core.h  EntityInspectorPanel.cpp  EntityInspectorPanel.h  InspectorPanel.cpp  InspectorPanel.h  ResourceInspectorPanel.cpp  ResourceInspectorPanel.h  ResourcesPanel.cpp  ResourcesPanel.h  ScenePanel.cpp  ScenePanel.h  UI.cpp  UI.h  UIState.h
engine/src/nova/: CMakeLists.txt
engine/test/: CMakeLists.txt
engine/test/core/: EngineTests.cpp  EventTests.cpp  IdTests.cpp  InputTests.cpp  LocalPtrTests.cpp  MemoryTests.cpp  WindowManagerTests.cpp  WindowTests.cpp  dummy.cpp
engine/test/event/: KeyTests.cpp
engine/test/gfx/: TextureManagerTests.cpp
engine/test/math/: SizeTests.cpp
engine/test/mock/: All.h  All.hh  ApplicationMock.hpp  EventObserverMock.hpp  RendererBackendMock.hh  RendererBackendMock.hpp  ResourcePoolsMock.hh  ResourcePoolsMock.hpp  StubResource.hh  TextureLoaderMock.hpp  WindowMock.hh  WindowMock.hpp
engine/test/renderer/: ResourcePoolTests.cpp
engine/test/resource/: TextureManagerTests.cpp
sandbox/: CMakeLists.txt  Context.hpp  Context2.hpp  main.cpp
src/sl/: CMakeLists.txt  dummy.cpp
src/sl/ai/: CMakeLists.txt  FuzzyController.hpp
src/sl/app/: Application.cpp  Application.h  ApplicationContext.h  ComponentsDeserializer.cpp  ComponentsDeserializer.h  ComponentsSerializer.cpp  ComponentsSerializer.h  ConfigLoader.cpp  ConfigLoader.h  Deserializer.cpp  Deserializer.h  Engine.cpp  Engine.h  Entrypoint.cpp  Entrypoint.h  SceneSystems.h  Serializer.cpp  Serializer.h  fwd.h
src/sl/application/: Application.cpp  Application.h  ApplicationContext.h  CMakeLists.txt  Config.h  ConfigLoader.cpp  ConfigLoader.h  Deserializer.cpp  Deserializer.h  Entrypoint.cpp  Entrypoint.h  Entrypoint.hpp  Serializer.cpp  Serializer.h  fwd.h
src/sl/asset/: Asset.h  AssetContainer.h  AssetContainer2.h  AssetGui.h  AssetLoader.hpp  AssetManager.cpp  AssetManager.h  AssetManager.hpp  CMakeLists.txt  Error.h
src/sl/async/: AsyncEngine.cpp  AsyncEngine.hpp  AsyncManager.cpp  AsyncManager.hpp  AsyncTask.h  CMakeLists.txt  Future.h  PeriodicTask.cpp  PeriodicTask.h  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  ThreadPool.hpp  Timer.cpp  Timer.h  TimerEngine.cpp  TimerEngine.h  fwd.h
src/sl/cam/: Camera.cpp  Camera.h  EulerCamera.cpp  EulerCamera.h  FPSCamera.h  FirstPersonCamera.h  fwd.h
src/sl/cfg/: Config.h  ConfigLoader.cpp  ConfigLoader.h
src/sl/core/: Asset.h  AtomicQueue.hpp  BaseError.h  BaseError.hpp  CMakeLists.txt  Clock.cpp  Clock.h  ClockImpl.h  ClockManager.cpp  ClockManager.h  Colors.h  Countable.hpp  Enumerable.hpp  Error.h  ErrorCode.h  Errors.hpp  FileSystem.cpp  FileSystem.h  GameObject.h  Hud.h  Input.h  InputHandler.h  InputManager.cpp  InputManager.h  Json.cpp  Json.h  Keyboard.h  Logger.cpp  Logger.h  Macros.h  Misc.hpp  Mouse.h  NotNullPtr.hpp  OptionalPtr.hpp  Output.h  PathManager.hpp  PathType.h  Profiler.cpp  Profiler.h  Scope.hpp  (+10 more)
src/sl/ecs/: CMakeLists.txt  Component.h  ComponentContainer.hpp  ComponentMap.cpp  ComponentMap.hpp  ComponentView.hpp  ComponentWrapper.h  ComponentsMap.hpp  Entity.cpp  Entity.h  Registry.cpp  Registry.h  Registry.hpp  fwd.h
src/sl/event/: Categories.h  Emitter.hpp  Event.h  EventBus.h  EventManager.h  EventObserver.h  EventPool.h  InputEvents.hpp  Util.h
src/sl/geom/: CubemapVertices.h  GeometryManager.h  Mesh.h  Model.h  ModelLoader.h  ModelLoader.hpp  ModelLoaderImpl.h  Vertex.h  fwd.h
src/sl/geometry/: Geometry.hpp  Mesh.h  Model.h  ModelLoader.hpp  ModelLoaderImpl.h  Vertex.h
src/sl/gfx/: BufferManager.h  BufferMemoryScheme.hpp  Cubemap.cpp  Cubemap.h  ElementBuffer.h  FrameBuffer.h  GraphicsContext.h  Image.h  LowLevelRenderer.cpp  LowLevelRenderer.h  LowLevelRendererProxy.hpp  RenderApi.h  RenderBuffer.h  RenderPass.h  Renderer.cpp  Renderer.h  Renderer.hpp  Shader.cpp  Shader.h  ShaderCompiler.h  ShaderCompiler.hpp  ShaderCompilerImpl.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  VertexArray.h  VertexBuffer.h  ViewFrustum.h  Viewport.cpp  Viewport.h  fwd.h
src/sl/glob/: Flags.h  Geometry.cpp  Geometry.h  Globals.cpp  Globals.h  Info.h  RendererInfo.h  Shaders.cpp  Shaders.h  Visual.h  World.h  fwd.h
src/sl/gpu/: BufferManager.h  BufferMemoryScheme.hpp  Cubemap.cpp  Cubemap.h  ElementBuffer.h  FrameBuffer.h  Image.h  RenderApi.h  RenderBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderCompiler.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  (+9 more)
src/starlight/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp  manual_test.cpp
test/app/: ApplicationTests.cpp  ConfigLoaderTests.cpp  DeserializerTests.cpp  EngineTests.cpp  SerializerTests.cpp
test/application/: ConfigLoaderTests.cpp  DeserializerTests.cpp  SerializerTests.cpp
test/asset/: AssetManagerTests.cpp
test/async/: AsyncManagerTests.cpp  PeriodicTaskTests.cpp  TimerTests.cpp
test/core/: AtomicQueueTests.cpp  EventTests.cpp  JsonTests.cpp  MiscTests.cpp  NotNullPtrTests.cpp  OptionalPtrTests.cpp  ScopeTests.cpp  StringTests.cpp
test/ecs/: ComponentContainerTests.cpp  ComponentMapTests.cpp  ComponentViewTests.cpp  EntityTests.cpp  RegistryTests.cpp
test/math/: UtilsTests.cpp
test/misc/: MiscTests.cpp
test/mocks/: ApplicationContextMock.hpp  CubemapMock.hpp  ElementBufferMock.hpp  FakeGPU.hpp  FakeIO.hpp  FakePlatform.hpp  FileSystemMock.hpp  FrameBufferMock.hpp  GraphicsContextMock.hpp  GuiApiMock.hpp  ImageMock.hpp  InputMock.hpp  Mocks.hpp  ModelLoaderImplMock.hpp  ModelLoaderMock.hpp  PeriodicTaskMock.hpp  RenderApiMock.hpp  RenderBufferMock.hpp  ShaderCompilerImplMock.hpp  ShaderCompilerMock.hpp  ShaderMock.hpp  TestComponent.h  TextureMock.hpp  Utils.hpp  VertexArrayMock.hpp  VertexBufferMock.hpp  WindowMock.hpp
test/platform/: PlatformTests.cpp
(+1574 files in other folders)
